--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <div class="jumbotron">
+      <h1 id="counter">0</h1>
+      <button id="dec" class="btn btn-primary" type="button">DEC</button>
+      <button id="inc" class="btn btn-primary" type="button">INC</button>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
