--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,9 @@
       <h1 id="counter">0</h1>
       <button id="dec" class="btn btn-primary" type="button">DEC</button>
       <button id="inc" class="btn btn-primary" type="button">INC</button>
+      <button id="rnd" class="btn btn-primary" type="button">RND</button>
+
+      
     </div>
     <div id="root"></div>
     <!--
